# doca-stdexec

./: .clang-format  .clangd  .gitignore  compile_commands.json  meson.build  xmake.lua
examples/: buf_example.cpp  mmap_example.cpp
include/: meson.build
include/doca_stdexec/: buf.hpp  buf_inventory.hpp  common.hpp  context.hpp  device.hpp  mmap.hpp  operation.hpp  progress_engine.hpp  rdma.hpp
include/doca_stdexec/common/: tcp.hpp
include/doca_stdexec/rdma/: oneside.hpp  task.hpp  twoside.hpp
test/: meson.build  rdma_loopback.cpp
x86_64/cache/: config  detect  toolchain
